--- a/downloader/public/index.html
+++ b/downloader/public/index.html
@@ -90,6 +90,39 @@
       grid-template-columns: 1fr 1fr;
       gap: 15px;
     }
+    .download-item {
+      background: #0f0f23;
+      border-radius: 4px;
+      padding: 12px;
+      margin-bottom: 10px;
+    }
+    .download-filename {
+      font-weight: bold;
+      margin-bottom: 8px;
+      word-break: break-all;
+    }
+    .download-progress-bar {
+      background: #333;
+      border-radius: 4px;
+      height: 20px;
+      overflow: hidden;
+      margin-bottom: 5px;
+    }
+    .download-progress-fill {
+      background: linear-gradient(90deg, #00d4ff, #00c853);
+      height: 100%;
+      transition: width 0.3s ease;
+    }
+    .download-stats {
+      display: flex;
+      justify-content: space-between;
+      font-size: 12px;
+      color: #888;
+    }
+    .no-downloads {
+      color: #666;
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -97,6 +130,11 @@
   <p>Configure your download clients below. The service watches the blackhole folder and sends DDL links to enabled clients.</p>
 
   <div id="message"></div>
+
+  <div class="card" id="downloadsCard" style="display:none;">
+    <h2>Active Downloads</h2>
+    <div id="downloadsList"></div>
+  </div>
 
   <div class="card">
     <h2>General Settings</h2>
@@ -671,6 +709,49 @@
       el.textContent = text;
       setTimeout(() => el.textContent = '', 5000);
     }
+
+    async function fetchDownloads() {
+      try {
+        const res = await fetch('/api/downloads');
+        const data = await res.json();
+        const downloads = data.downloads || [];
+
+        const card = document.getElementById('downloadsCard');
+        const list = document.getElementById('downloadsList');
+
+        if (downloads.length === 0) {
+          card.style.display = 'none';
+          return;
+        }
+
+        card.style.display = 'block';
+        list.innerHTML = downloads.map(dl => `
+          <div class="download-item">
+            <div class="download-filename">${escapeHtml(dl.filename)}</div>
+            <div class="download-progress-bar">
+              <div class="download-progress-fill" style="width: ${dl.progress}%"></div>
+            </div>
+            <div class="download-stats">
+              <span>${dl.progress.toFixed(1)}%</span>
+              <span>${dl.speed || ''}</span>
+              <span>${dl.status}</span>
+            </div>
+          </div>
+        `).join('');
+      } catch (error) {
+        console.error('Error fetching downloads:', error);
+      }
+    }
+
+    function escapeHtml(text) {
+      const div = document.createElement('div');
+      div.textContent = text;
+      return div.innerHTML;
+    }
+
+    // Refresh downloads every 2 seconds
+    setInterval(fetchDownloads, 2000);
+    fetchDownloads();
 
     loadConfig();
   </script>
